--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -164,14 +164,14 @@ body.tema-dark {
 }
 
 .perfil_borda {
-  border: 3.5px solid var(--cor-primaria);
+  border: 3px solid var(--cor-primaria);
   justify-self: center;
-  width: 115px;
-  height: 115px;
+  width: 160px;
+  height: 160px;
   border-radius: 50%;
   display: grid;
   place-items: center;
-  margin-bottom: .75rem 
+  margin-bottom: 3rem 
 }
 
 .perfil_nome {
